--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ django-phonenumber-field==5.2.0
 phonenumbers==8.12.36
 pilkit==2.0
 Pillow==8.4.0
-pkg_resources==0.0.0
+psycopg2-binary==2.9.1
 pytz==2021.3
 six==1.16.0
 sqlparse==0.4.2
